Fix test failling due to Java 17 Gzip behaivour changes